_rendered/test/external-dns/external-dns/templates/deployment.yaml
---
# Source: external-dns/templates/deployment.yaml
# Source: external-dns/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: "external-dns"
  labels:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.15.1
    helm.sh/chart: external-dns-8.7.1
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-dns
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-dns
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: external-dns
        app.kubernetes.io/version: 0.15.1
        azure.workload.identity/use: "true"
        helm.sh/chart: external-dns-8.7.1
      annotations:
        checksum/secret: a321d5ffcc9e6432fa322416d912aaf885bbd8b28ada83376383e15314a43eec
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      affinity:
        podAffinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: external-dns
                    app.kubernetes.io/name: external-dns
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
      automountServiceAccountToken: true
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: docker.io/bitnami/external-dns:0.15.1-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          args:
            # Generic arguments
            - --metrics-address=:7979
            - --log-level=info
            - --log-format=text
            - --domain-filter=test.corp.example.cloud
            - --policy=upsert-only
            - --provider=azure
            - --registry=txt
            - --interval=1m
            - --txt-owner-id=external-dns
            - --source=istio-gateway
            - --source=istio-virtualservice
            - --source=gateway-httproute
            - --source=service
            - --source=ingress
            # Azure Arguments
            - --azure-resource-group=rg-dns
            # Extra arguments
            - --txt-wildcard-replacement=wildcard
          env:
          envFrom:
          ports:
            - name: http
              containerPort: 7979
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              memory: 80Mi
            requests:
              cpu: 30m
              memory: 80Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            # Azure mountPath(s)
            - name: azure-config-file
              mountPath: /etc/kubernetes/
              readOnly: true
      volumes:
        - name: empty-dir
          emptyDir: {}
        # Azure and Azure Private DNS volume(s)
        - name: azure-config-file
          secret:
            secretName: external-dns
